--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+management.endpoints.web.exposure.include=*
+spring.security.user.name=user
+spring.security.user.password=password
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
